--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </ul>
         </nav>
         <a href="" class="brand header__link">
-          <b class="brand__forename">Yan</b><b class="brand__surname">.js</b>
+          <b class="brand__forename">颜</b>
         </a>
       </div>
     </header>
@@ -41,7 +41,7 @@
       <header class="feature">
         <div class="container container--wide">
           <h1 class="feature__title">Yan.js</h1>
-          <p class="feature__subtitle">Add emoticons to your input bar. ヘ(^_^ヘ)</p>
+          <p class="feature__subtitle">Add emoticons to your text input. ヘ(^_^ヘ)</p>
         </div>
       </header>
 
