--- a/index.html
+++ b/index.html
@@ -87,15 +87,14 @@ Yan.init(target, {
       });
     </script>
 
-    <script type="text/javascript">
-      var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-37435578-1']);
-      _gaq.push(['_trackPageview']);
-
+    <script type='text/javascript'>
       (function() {
-        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      var c = document.createElement('script'); 
+      c.type = 'text/javascript';
+      c.async = true;
+      c.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'www.clicki.cn/boot/51834';
+      var h = document.getElementsByTagName('script')[0];
+      h.parentNode.insertBefore(c, h);
       })();
     </script>
 
