--- a/examples/index.html
+++ b/examples/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="renderer" content="webkit">
+    <meta name="viewport" content="width=device-width">
     <title>Yan.js example</title>
     <script src="../bower_components/react/react.min.js"></script>
     <script src="../bower_components/fetch/fetch.js"></script>
@@ -11,8 +13,8 @@
     <link rel="stylesheet" href="../dist/yan.css">
     <style>
       #yan-btn {
-        margin-left: 500px;
-        margin-top: 500px;
+        margin-left: 50%;
+        margin-top: 50%;
       }
     </style>
   </head>
