update drop.js path

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width">
     <meta name="description" content="给输入框增加颜文字组件">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/styles/github.min.css">
-    <link rel="stylesheet" href="//cdn.rawgit.com/HubSpot/drop/master/css/drop-theme-basic.css">
-    <link rel="stylesheet" href="//cdn.rawgit.com/HubSpot/drop/master/css/drop-theme-arrows.css">
+    <link rel="stylesheet" href="//cdn.rawgit.com/HubSpot/drop/master/dist/css/drop-theme-basic.min.css">
+    <link rel="stylesheet" href="//cdn.rawgit.com/HubSpot/drop/master/dist/css/drop-theme-arrows.min.css">
     <link rel="stylesheet" href="//rawgit.com/wong2/yan.js/master/dist/yan.css"></script>
     <link rel="stylesheet" href="styles/main.css">
   </head>
@@ -71,7 +71,7 @@ Yan.init(target, {
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.min.js"></script>
     <script src="//cdn.rawgit.com/github/fetch/master/fetch.js"></script>
-    <script src="//cdn.rawgit.com/HubSpot/drop/master/drop.min.js"></script>
+    <script src="//cdn.rawgit.com/HubSpot/drop/master/dist/js/drop.min.js"></script>
     <script src="//rawgit.com/wong2/yan.js/master/dist/bundle.min.js"></script>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/8.4/highlight.min.js"></script>
