drop depend on tether

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ Yan.init(target, {
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/react/0.12.2/react.min.js"></script>
     <script src="//cdn.rawgit.com/github/fetch/master/fetch.js"></script>
+    <script src="//cdn.rawgit.com/HubSpot/tether/master/dist/js/tether.min.js"></script>
     <script src="//cdn.rawgit.com/HubSpot/drop/master/dist/js/drop.min.js"></script>
     <script src="//rawgit.com/wong2/yan.js/master/dist/bundle.min.js"></script>
 
